jewel-sectioncontent: fix an issue with sizing in components inside SectionContent containers. Since SC default state is hidden, that made components inside report 0 for width and height instead getting the right size, This should hopefully solve other layout issues

--- a/frameworks/projects/Jewel/src/main/resources/defaults.css
+++ b/frameworks/projects/Jewel/src/main/resources/defaults.css
@@ -3504,7 +3504,8 @@ j|PopUp {
   }
 }
 .jewel.section {
-  display: none;
+  display: flex;
+  visibility: hidden;
   flex-flow: column nowrap;
   height: 100%;
 }
@@ -3512,7 +3513,7 @@ j|PopUp {
   flex: 0 0 auto;
 }
 .jewel.section.is-selected {
-  display: flex;
+  visibility: visible;
 }
 
 j|SectionContent {
